# persCode

./: .gitignore  airflow_example.py  approve.sh  approve_ps.sh  lambMapRed.py  pygame_test.py  pysonic_test.py  scapy_test.py  vimrc
.github/workflows/: rust.yml
DarthTrader/: script.py
codewars/: are_they_the_same.py  daily_practice.py  uniqueInOrder.py
euler/p1/: solution
euler/p2/: solution.py
flaskr/flaskr/: Untitled.ipynb  flaskr.py
hash_map/: Cargo.toml
hello_cargo/: Cargo.toml
neural_nets/: deep_net.py  neuralnetexample.py
probables/: Untitled.ipynb  bloom.py  sizer.py  war_and_peace.txt  war_and_peace_short.txt
python/: script.py
python/abstract_sandbox/: abc.py
python/decorators/: basic_decorator.py  the_idea.py
python/flask-tracking/: requirements.txt
python/microblog/: .flaskenv
python/mileage/: mileage.py
python/sandbox/: json_test.json  script.py  thing.txt
pythonCookBook/: monte.py  multiDict.py  priorityQueue.py  sequences.py  timingFunction.py
pythonCookBook/ch1/: 1_1.py  1_2.py  1_3.py  1_3_2.py  1_4.py  1_5.py  1_6.py  1_7.py  1_8.py  dogs  picklefile  somefile.txt
rmq/src/: logs.py  receive_logs_direct.py  receive_test_msg.py  send_test_msg.py
rust/async_tuts/: Cargo.toml
rust/async_workshop/: Cargo.toml
rust/cacher/: Cargo.toml
rust/control_flow/: Cargo.toml
rust/crow/: Cargo.toml
rust/display_trait/: Cargo.toml
rust/thrift_test/: Cargo.toml
rust/thrift_test/src/: main.rs  test.rs
rust/tokio_playground/tokio_3/: Cargo.toml
rust/tokio_playground/tokio_3/src/: main.rs
sniff/: scapy_test.py
(+106 files in other folders)
