[package]
name = "thrift_test"
version = "0.1.0"
authors = ["Jeff van Geete <jeff.vangeete@protectwise.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrift = "0.12.0"
ordered-float = "1.1.1"
try_from = "0.2.0"

