[package]
name = "tokio_3"
version = "0.1.0"
authors = ["Jeff van Geete <jeff.vangeete@protectwise.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
